kubernetes/apps/homelab/copyparty/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: copyparty
subsets:
- addresses:
  - ip: 10.0.0.11
  ports:
  - name: http
    port: 3923
    protocol: TCP
