kubernetes/apps/homelab/copyparty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  labels:
    app: copyparty
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3923
