kubernetes/apps/homelab/copyparty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: files.murtazau.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: copyparty
            port:
              number: 80
  tls:
  - hosts:
    - files.murtazau.xyz
    secretName: copyparty-tls
